--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
+    "lint": "eslint --ext .jsx --fix src",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,7 +13,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "eslint": "^8.23.0",
+    "eslint-plugin-react": "^7.31.1"
   },
   "keywords": [],
   "description": ""
