--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9",
-    "vite-plugin-eslint": "^1.8.1",
     "eslint": "^8.23.0",
-    "eslint-plugin-react": "^7.31.1"
+    "eslint-plugin-react": "^7.31.1",
+    "vite": "^4.3.9",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "keywords": [],
   "description": ""
